# TROT-Q

./: .gitmodules  LICENSE.md  README.md
TROT-Q/: CMakeLists.txt  package.xml  rviz.rviz
TROT-Q/include/: main.h  peacock.h  utility.h
TROT-Q/launch/: gazebo.launch  main.launch
TROT-Q/launch/include/: mapping_ouster64.launch  ouster64.yaml  trot_room.world
TROT-Q/scripts/: mpc-slsqp.py  tf_broadcaster.py  visualizer.py
TROT-Q/src/: main.cpp
YOLO/: CMakeLists.txt  package.xml  ros_opencv_dnn.py
YOLO/msg/: bbox.msg
YOLO/scripts/: ros_opencv_dnn.py  yolov4-tiny-3l-obj.cfg
anymal_b_config/: config.json  package.xml
anymal_b_config/config/gait/: gait.yaml
anymal_b_config/launch/: bringup.launch  gazebo.launch
anymal_b_config/urdf/: anymal_lidar_imu.urdf
jackal_package_for_gazebo/: CMakeLists.txt  package.xml
jackal_package_for_gazebo/config/: control.yaml
jackal_package_for_gazebo/launch/: gazebo.launch
jackal_package_for_gazebo/scripts/: joy_controller.py
jackal_package_for_gazebo/urdf/: jackal.urdf.xacro
ouster_gazebo_plugins/urdf/: OS-nomass.urdf.xacro  OS0-128.urdf.xacro  OS1-64.urdf.xacro
