<?xml version="1.0"?>
<package format="2">
  <name>yolo_ros_simple</name>
  <version>0.1.0</version>
  <description>YOLO-ROS-simple Package</description>

  <maintainer email="eungchang_mason@kaist.ac.kr">EungChang Mason Lee</maintainer>
  <author>EungChang Mason Lee</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
  
</package>
