<?xml version="1.0"?>
<package>
  <name>jackal_package_for_gazebo</name>
  <version>0.7.2</version>
  <description>URDF robot description for Jackal</description>

  <maintainer email="eungchang_mason@kaist.ac.kr">Mason</maintainer>
  <license>BSD</license>
  <author email="eungchang_mason@kaist.ac.kr">Mason</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
